# sqlite_protobuf

./: LICENSE  README.md  meson.build
include/: sqlite_protobuf.h
proto_table/: meson.build  proto_table.c
proto_table/include/: proto_table.h
proto_table/src/: proto_table.c
proto_table/tests/: meson.build  message.c  result_list.c
proto_table/tests/schemas/: meson.build  test.proto
src/: extension_main.cpp  protobuf_enum.cpp  protobuf_enum.h  protobuf_extract.cpp  protobuf_extract.h  protobuf_json.cpp  protobuf_json.h  protobuf_load.cpp  protobuf_load.h  protobuf_text.cpp  protobuf_text.h  utilities.cpp  utilities.h
